--- a/src/main/resources/static/views/fragments/footer.html
+++ b/src/main/resources/static/views/fragments/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footer">
+    <p class="my-3 text-center text-small mb-1">&copy; 2023 YW</p>
 </footer>
 </html>
