--- a/src/main/resources/static/views/fragments/header.html
+++ b/src/main/resources/static/views/fragments/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <header th:fragment="header">
+
     <div class="px-3 py-2 text-bg-dark">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -62,7 +63,7 @@
             </form>
 
             <div class="text-end">
-                <button type="button" class="btn btn-light text-dark me-2">Login</button>
+                <button type="button" class="btn btn-light text-dark me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
                 <button type="button" class="btn btn-primary">Sign-up</button>
             </div>
         </div>
