--- a/src/main/resources/static/views/fragments/login.html
+++ b/src/main/resources/static/views/fragments/login.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Login -->
-                    <form method="post">
+                    <form method="post" action="/member/signin" id="login-frm">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">이메일</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" name="email">
@@ -25,10 +25,10 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">아이디 기억하기</label>
                         </div>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                        <button type="submit" class="btn btn-primary">로그인</button>
                     </form>
                 </div>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                <button type="submit" class="btn btn-primary">로그인</button>
             </div>
         </div>
     </div>
