--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -3,5 +3,5 @@
       layout:decorate="~{views/fragments/layout}">
 
 <th:block layout:fragment="main">
-   <h1>회원정보</h1>
+   <h1>메인페이지</h1>
 </th:block>
