--- a/src/main/resources/static/views/member/info.html
+++ b/src/main/resources/static/views/member/info.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{views/fragments/layout}">
 
-</body>
-</html>
+<th:block layout:fragment="main">
+   <h1>회원 정보</h1>
+
+</th:block>
