유저목록(ajax), 게시판 폼 추가

--- a/src/main/resources/static/views/fragments/header.html
+++ b/src/main/resources/static/views/fragments/header.html
@@ -20,7 +20,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link text-white">
+                        <a href="/board/list" class="nav-link text-white">
                             <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                 <use xlink:href="#speedometer2"></use>
                             </svg>
@@ -36,11 +36,11 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link text-white">
+                        <a href="/member/reports" class="nav-link text-white">
                             <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                 <use xlink:href="#grid"></use>
                             </svg>
-                            XX
+                            유저목록
                         </a>
                     </li>
                     <li>
