--- a/src/main/resources/static/views/fragments/layout.html
+++ b/src/main/resources/static/views/fragments/layout.html
@@ -18,16 +18,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     <!--  Modal  -->
-    const myModal = document.getElementById('exampleModal')
-    const myInput = document.getElementById('exampleInputEmail1')
+    const loginModal = document.getElementById('exampleModal')
+    const loginInput = document.getElementById('exampleInputEmail1')
 
-    myModal.addEventListener('shown.bs.modal', () => {
-        myInput.focus()
+    loginModal.addEventListener('shown.bs.modal', () => {
+        loginInput.focus()
     })
 
     const loginbtn = document.querySelector("#login-btn")
     const loginfrm = document.querySelector("#login-frm")
-    loginbtn.addEventListener("click", ()=>{
+    loginbtn?.addEventListener("click", ()=>{
         loginfrm.method = "post";
         loginfrm.submit();
     })
