--- a/src/main/resources/static/views/fragments/login.html
+++ b/src/main/resources/static/views/fragments/login.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Login -->
-                    <form method="post" action="/member/signin" id="login-frm">
+                    <form method="post" action="/member/login" id="login-frm">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">이메일</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" name="email">
