--- a/src/main/resources/static/views/member/info.html
+++ b/src/main/resources/static/views/member/info.html
@@ -3,6 +3,45 @@
       layout:decorate="~{views/fragments/layout}">
 
 <th:block layout:fragment="main">
-   <h1>회원 정보</h1>
-
+    <div class="container w-50 p-3">
+        <h1>회원정보</h1>
+        <p>
+        <hr>
+        </p>
+        <form class="modify-frm" method="post">
+            <div class="mb-3 row">
+                <label for="email" class="col-sm-2 col-form-label">이메일</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="email" name="email" th:value="${session.member.email}">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="uname" class="col-sm-2 col-form-label">이름</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="uname" name="uname" th:value="${session.member.uname}">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="mobile" class="col-sm-2 col-form-label">전화번호</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="mobile" name="mobile" th:value="${session.member.mobile}">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="regDate" class="col-sm-2 col-form-label">가입일</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="regDate" name="regDate" th:value="${session.member.regDate}">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="modifyDate" class="col-sm-2 col-form-label">정보수정일</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="modifyDate" name="modifyDate" th:value="${session.member.modifyDate}">
+                </div>
+            </div>
+            <hr>
+            <a class="btn btn-primary" href="/member/modify">정보 수정하기</a>
+            <a class="btn btn-danger text-light me-2 delete-btn" href="/member/delete">회원탈퇴</a>
+        </form>
+    </div>
 </th:block>
