--- a/src/main/resources/static/views/fragments/layout.html
+++ b/src/main/resources/static/views/fragments/layout.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <script src="../../common/js/common.js"></script>
+    <script src="../../common/js/Pagination.js"></script>
+    <script src="../../common/js/PnJValidation.js"></script>
+    <link rel="stylesheet" href="../../common/css/pagination.css">
     <title>CRUD 만들기</title>
-
 </head>
 <body class="g-sidenav-show bg-gray-100">
 <th:block th:replace="views/fragments/login :: login"></th:block>
