--- a/src/main/resources/static/views/member/deletelist.html
+++ b/src/main/resources/static/views/member/deletelist.html
@@ -5,7 +5,7 @@
     <script src="../../common/js/common.js"></script>
 </head>
 <th:block layout:fragment="main">
-    <h1>회원목록</h1>
+    <h1>탈퇴회원목록</h1>
     <div class="row my-4">
         <div class="col-11">
             <div class="card">
