--- a/src/main/resources/static/views/board/list.html
+++ b/src/main/resources/static/views/board/list.html
@@ -67,9 +67,25 @@
 <th:block layout:fragment="main">
     <div class="container">
         <h2>게시판</h2>
-        <form action="/board/search" method="get" class="row" role="search">
-            <input id="keyword" name="keyword" type="search" class="form-control col" placeholder="Search..." aria-label="Search"/>
-            <button type="submit" class="btn btn-primary col">검색</button>
+        <form name="searchForm" action="/board/list" method="get" role="search">
+            <input type="hidden" name="page" th:value="${page}" />
+            <input type="hidden" name="size" th:value="${size}" />
+            <div class="row justify-content-end">
+                <div class="col-sm-3">
+                    <select class="form-select" name="searchType" id="searchType">
+                        <option selected value="bTitleAndbContent" th:selected="${searchType} == 'bTitleAndbContent'">제목+내용</option>
+                        <option value="bTitle" th:selected="${searchType} == 'bTitle'">제목</option>
+                        <option value="bContent" th:selected="${searchType} == 'bContent'">내용</option>
+                        <option value="bWriter" th:selected="${searchType} == 'bWriter'" >작성자</option>
+                    </select>
+                </div>
+                <div class="col-sm-5">
+                    <input id="searchValue" name="searchValue" type="search" th:value="${searchValue}" class="form-control col6 col-6-sm" placeholder="Search..." aria-label="Search"/>
+                </div>
+                <div class="col-sm-1">
+                    <button type="submit" class="btn btn-primary">검색</button>
+                </div>
+            </div>
         </form>
         <table class="table table-striped table-hover">
             <thead>
@@ -90,12 +106,17 @@
         </div>
     </div>
     <script th:inline="javascript">
+        const searchFrm = document.searchForm;
         /*<![CDATA[*/
         let pageNo = [[${page}]];
-        let pageSize = [[${size}]]
-        let currentPage = [[${currentPage}]]
+        let pageSize = [[${size}]];
+        let currentPage = [[${currentPage}]];
+
+        let searchType = document.querySelector("#searchType").text;
+        let searchValue = document.querySelector("#searchValue").text;
+
         /*]]>*/
-        XMLAjax(`/api/board/list`, "GET", {"page": pageNo}, (data) => {
+        XMLAjax(`/api/board/list`, "GET", new FormData(searchFrm), (data) => {
             let jsonData = JSON.parse(data);    // 전달된 데이터를 json으로 파싱 => javascript Object 형으로 전환
             if (jsonData.result) {
                 let tbodyEl = document.querySelector(".table-striped tbody"); // 값을 추가할 요소 셀렉터(선택자)
@@ -114,11 +135,26 @@
                         <td><p class="text-secondary mb-0 text-sm text-center is_delete">${board.delYn}</p></td>
                         `;
                     tbodyEl.append(trTag);
-                })
 
+
+                });
+
+                searchFrm.searchValue = jsonData.searchValue;
+                Object.entries(searchFrm.searchType.options).forEach((k,el) => {
+                    if (el.value === jsonData.searchType) {
+                        el.setAttribute("selected", true);
+                    }
+                })
                 /*<![CDATA[*/
-                let pagenation = new Pagination(document.querySelector(".pageArea"), pageNo, pageSize,
-                    jsonData.totalElements, 10, undefined, {}/*전달 파라미터 - 파이썬 딕셔너리 형태 동일*/);
+                let pagenation = new Pagination(
+                    document.querySelector(".pageArea"),
+                    pageNo, // 현재 페이지
+                    pageSize, // 1페이지 당 게시물 갯수
+                    jsonData.totalElements, // 총 게시물 수
+                    10, // 페이지 버튼 수
+                    undefined, //전달 경로
+                    Object.fromEntries(new FormData(searchFrm))/*전달 파라미터 - 파이썬 딕셔너리 형태 동일*/
+                );
                 /*]]>*/
                 // for (let i = 0; i < jsonData.boardList.length; i++) {
                 //     // tr 요소내 html 삽입
