--- a/src/main/resources/static/views/board/reWrite.html
+++ b/src/main/resources/static/views/board/reWrite.html
@@ -4,11 +4,11 @@
 
 <th:block layout:fragment="main">
     <div class="container w-75 p-3">
-        <h1>글쓰기</h1>
+        <h1>답글쓰기</h1>
         <p>
         <hr>
         </p>
-        <form class="write-frm" method="post" action="/board/list">
+        <form class="write-frm" method="post">
             <div class="mb-3 row">
                 <label for="bTitle" class="col-sm-2 col-form-label">제목</label>
                 <div class="col-sm-5">
